# jbar

./: .gitignore  README.md  example.ipynb  package-lock.json  package.json  pyproject.toml
data/: test_features.csv
jbar/: __init__.py
js/: .eslintrc  barchart.js  package-lock.json  package.json  widget.css  widget.js
js/src/: dropdown.js  widget.css  widget.js
src/jbar/: __init__.py
src/jbar/static/: widget.js
src/jbarchart/: __init__.py
